bug 1128029 - Add configure test for getprotobyname_r. r=ted